# komment

./: .gitignore  Cargo.toml  README.md  index.html  justfile  komment-embed.js  package-lock.json  package.json  wrangler.jsonc
doc/: CLOUDFLARE.md  DESIGN.md  HOW-TO-USE.md  HOWTOUSE.md  SECURITY.md
public/: index.html  komment-embed.js  sample.html
src/: lib.rs  render.rs
worker/: Cargo.toml  package-lock.json  package.json  wrangler.toml
worker/src/: lib.rs
