[package]
name = "komment"
version = "0.1.0"
edition = "2024"
authors = ["Seungjin Kim"]
description = "A proof-of-concept commenting system powered by GitHub Discussions, implemented in Rust and compiled to WebAssembly (WASM)."
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "console",
    "ShadowRoot",
    "HtmlTemplateElement",
    "DocumentFragment",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
